Revision history for Task-Dancer

0.35    13.11.11
        * Adding Dancer::Plugin::Auth::Basic
        * Adding Dancer::Plugin::Auth::Htpasswd
        * Adding Dancer::Plugin::Nitesi
        * Enabling Dancer::Session::CHI

0.34    05.11.11
        * Adding Dancer::Plugin::Preprocess::Sass
        * Adding Dancer::Plugin::Hosts
        * Adding Dancer::Plugin::Passphrase
        * Adding Dancer::Plugin::ValidateTiny
        * Disabling Dancer::Plugin::SporeDefinitionControl
        * Disabling Dancer::Template::Semantic
        * Adding and disabling Dancer::Session::CHI

0.33    21.09.11
        * Adding Dancer::Plugin::Dispatcher
        * Adding Dancer::Plugin::Mongoose
        * Adding Dancer::Plugin::EncodeID

0.32    08.09.11
        * Adding Dancer::Plugin::ElasticSearch
        * Adding Dancer::Plugin::DirectoryView
        * Adding Dancer::Plugin::Stomp
        * Adding Dancer::Plugin::LibraryThing

0.31    11.08.11 
        * Adding Dancer::Plugin::DebugToolbar
        * Adding Dancer::Plugin::EscapeHTML
        * Uncommenting Dancer::Plugin::ORMesque
        * Removing deprecated Dancer::Plugin::Validation         

0.30    30.07.11
        * Adding Dancer::Plugin::NYTProf
        * Adding Dancer::Plugin::Thumbnail

0.29    03.07.11
        * Adding Dancer::Plugin::Bcrypt
        * Adding Dancer::Plugin::XML::RSS
        * Adding Dancer::Session::MongoDB
        * Adding Dancer::Template::TemplateFlute
        * Adding Dancer::Logger::ColorConsole
        * Uncommenting Dancer::Plugin::Mongo

0.28    28.05.11
        * Commenting Dancer::Plugin::Mongo (MongoDB not installing)
        * Adding Dancer::Plugin::TimeRequests
        * Adding Dancer::Plugin::Async

0.27    11.04.11
        * Adding Dancer::Plugin::Fake::Response
        * Deprecating Dancer::Plugin::Cache, and
        * Adding Dancer::Plugin::Cache::CHI
        * Adding Dancer::Plugin::Progress
        * Uncommenting Dancer::Plugin::MobileDevice (forcing 0.03)

0.26    29.03.11